# ubirch-board-firmware

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  build-docker.sh  build.sh  package-config.cmake.in
board/: CMakeLists.txt
board/frdm_k82f/: CMakeLists.txt  README.md  board.c  board.h  cell.h  clock_config.c  clock_config.h  frdm_k82f.h
board/frdm_kl82z/: CMakeLists.txt  README.md  board.c  board.h  cell.h  clock_config.c  clock_config.h  frdm_kl82z.h
board/ubirch1r02/: CMakeLists.txt  README.md  board.c  board.h  cell.h  ubirch1r01.h  ubirch1r02.h
board/ubirch1r03/: CMakeLists.txt  README.md  board.c  board.h  cell.h  clock_config.c  ubirch1r03.h
board/ubirch1r03k01/: CMakeLists.txt  README.md  board.c  board.h  cell.h  clock_config.c  clock_config.h  ubirch1r03k01.h
board/ubridge10/: CMakeLists.txt  README.md  board.c  board.h  cell.h  clock_config.c  spirit1.h  ubridge10.h
board/usense/: CMakeLists.txt  MKL82Z128xxx7_2017-03-15_12_48.mex  README.md  board.c  board.h  clock_config.c  usense.h
firmware/: CMakeLists.txt
firmware/ubirch/: crypto.c  crypto.h  dbgutil.c  dbgutil.h  device.c  device.h  i2c.c  i2c.h  isl29125.c  isl29125.h  modem.h  rtc.c  rtc.h  sdhc.c  sdhc.h  sim800h.h  ssd1306.c  ssd1306.h  timer.c  timer.h  uart.c  uart.h  ws2812b.c  ws2812b.h
firmware/ubirch/i2c/: bme280.c  bme280.h  bmp180.c  bmp180.h  isl29125.c  isl29125.h  ssd1306.c  ssd1306.h
firmware/ubirch/i2c/bosch_sensortec/: bme280.c  bme280.h  bmp180.c  bmp180.h
firmware/ubirch/m66/: m66_core.c  m66_core.h  m66_debug.h  m66_http.c  m66_http.h  m66_ops.c  m66_ops.h  m66_parser.c  m66_parser.h  m66_tcp.c  m66_tcp.h  mqtt.c  mqtt.h
firmware/ubirch/microphone/: AudioFlex.cpp  AudioFlex.h  audio_dma.c  audio_dma.h  fsl_flexio_mems.c  fsl_flexio_mems.h  fsl_flexio_mems_edma.c  fsl_flexio_mems_edma.h  mic.c  mic.h  pdm2pcm.c  pdm2pcm.h  wav_record.h
firmware/ubirch/rf-sub-GHz/: rf_lpuart.c  rf_lpuart.h
firmware/ubirch/rf-sub-ghz/: rf_lpuart.c  rf_lpuart.h
firmware/ubirch/sdhc/: sdhc_config.h
firmware/ubirch/sim800h/: CMakeLists.txt  sim800h_core.c  sim800h_core.h  sim800h_debug.h  sim800h_http.c  sim800h_http.h  sim800h_ops.c  sim800h_ops.h  sim800h_parser.c  sim800h_parser.h  sim800h_tcp.c  sim800h_tcp.h
firmware/ubirch/spi/SPIRIT1_Library/Inc/: MCU_Interface.h
firmware/ubirch/spi/SPIRIT1_Library/Src/: SPIRIT_Management.c  SPIRIT_PktCommon.c  SPIRIT_Radio.c  SPIRIT_Timer.c
firmware/ubirch/sub-GHz/: rf_lpuart.c  rf_lpuart.h
tests/: CMakeLists.txt
tests/board/: CMakeLists.txt  ffconf.c  ffconf.h  main.c  sdhc_config.h  support.c  support.h  test_audio.c  test_board_ubirch1r03k01.c  test_i2s.c  test_pir.c  test_quectel.c  test_rf_lpuart.c  test_rgb.c  test_rgb_dma.c  test_rgb_flexio.c  test_sdcard.c  test_touch.c  test_uart.c
tests/board/ubirch1r03/: CMakeLists.txt  support.c  support.h  test_board_ubirch1r03.c  test_gpio.c  test_quectel.c  test_rf_lpuart.c  test_rgb_flexio.c  test_sdcard.c
tests/board/ubirch1r03k01/: CMakeLists.txt  support.h  test_audio.c  test_board_ubirch1r03k01.c  test_i2s.c  test_quectel.c  test_rf_lpuart.c  test_rgb_flexio.c  test_touch.c
tests/bootloader/: CMakeLists.txt  test_bootloader.c
tests/cc430/: CMakeLists.txt  cc430.c
tests/firmware/: CMakeLists.txt  bca.h  test.c  test.h  test_firmware.c  test_i2c.c  test_rtc.c  test_sdhc_fat.c  test_timer.c  test_ws2812b_flexio.c
tests/firmware/i2c/: CMakeLists.txt  test_bme280.c  test_bmp180.c  test_i2c.c  test_isl29125.c  test_ssd1306.c
tests/firmware/timer/: test_timer.c
tests/gsm_console/: CMakeLists.txt  call.txt  config.h.template  main.c
tests/i2s/: CMakeLists.txt  i2s.c  i2s.h  tosdcard.c  tosdcard.h
tests/identify/: CMakeLists.txt  identify.c
tests/modem/: CMakeLists.txt  config.h.template  modem.c
tests/modem_http/: CMakeLists.txt  main.c  modem_http.c
tests/modem_power/: CMakeLists.txt  modem_power.c
tests/power_mode/: CMakeLists.txt  power_mode.c
tests/power_mode_extpin/: CMakeLists.txt  power_mode_extpin.c  power_mode_extpin.h
tests/power_mode_rtc/: CMakeLists.txt  clock_mcg.c  power_mode_rtc.c
tests/power_modes/: CMakeLists.txt  new_power.c  power_manager.c  power_modes.c
tests/power_switch/: CMakeLists.txt  power_switch.c  power_switch.h
tests/test_microphone/: CMakeLists.txt  test_mic.c
